2003-08-06  Nick Clifton  <nickc@redhat.com>

	* po/fr.po: Updated French translation.

2003-08-06  Alan Modra  <amodra@bigpond.net.au>

	* elflink.c (_bfd_elf_create_dynamic_sections): Mark .dynbss with
	SEC_LINKER_CREATED.

2003-08-05  Daniel Jacobowitz  <drow@mvista.com>

	* elf32-arm.h (WILL_CALL_FINISH_DYNAMIC_SYMBOL): Define.
	(elf32_arm_final_link_relocate, elf32_arm_relocate_section): Use it.

2003-08-03  Jeff Muizelaar  <muizelaar@rogers.com>

	* coffcode.h (coff_slurp_line_table): Return with a warning
	message if the line number table could not be read.

2003-08-04  Nick Clifton  <nickc@redhat.com>

	* elflink.h (elf_link_add_object_symbols): Prepend "warning: "
	to messages produced for .gnu.warning.SYMBOL sections.

2003-08-04  Alan Modra  <amodra@bigpond.net.au>

	* elfcode.h: Convert to C90, remove unneeded casts and prototypes.
	* elfcore.h: Likewise.
	* elflink.c: Likewise.
	* elflink.h: Likewise.
	* elf.c (sym_is_global): Remove INLINE.
	(align_file_position): Replace INLINE with inline.
	* elfcode.h (elf_swap_dyn_in, elf_swap_dyn_out): Remove INLINE.
	(elf_file_p): Replace INLINE with inline.

2003-08-02  Kaz Kojima  <kkojima@rr.iij4u.or.jp>

	* elf32-sh.c (sh_elf_check_relocs): Don't set DF_TEXTREL here.

2003-08-01  H.J. Lu  <hongjiu.lu@intel.com>

	* elfxx-ia64.c (get_got): Align the .got section at 8 bytes.

2003-08-01  H.J. Lu  <hongjiu.lu@intel.com>

	* elfxx-ia64.c (elfNN_ia64_finish_dynamic_symbol): Use
	ElfNN_External_Rela instead of Elf64_External_Rela.

2003-08-01  Nick Clifton  <nickc@redhat.com>

	* config.bfd: Add code to catch obsolete configurations and warn
	about them unless --enable-obsolete is used.  Use this to mark
	vax-vms port as obsolete.

2003-07-30  Alan Modra  <amodra@bigpond.net.au>

	* elf32-ppc.c (ppc_elf_install_value): Tidy.
	(ppc_elf_relax_section): Remove dead code.  Remove unnecessary casts.
	Formatting.
	* elfxx-target.h: Remove PARAMS macro.  Formatting.

2003-07-30  Alan Modra  <amodra@bigpond.net.au>
